<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    >

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:id="@+id/cardview"
    >
    <TextView
        android:id="@+id/type"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/type" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/symbol"
        android:layout_gravity="end"
        android:text="@string/symbol"
       android:layout_marginRight="140dp"
        android:layout_marginTop="6dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_gravity="start"
        android:text="@string/name"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="6dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/code"
        android:layout_gravity="end"
        android:text="@string/code"
       android:layout_marginRight="140dp"
        android:layout_marginTop="70dp"
        />
    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/add"
        android:layout_gravity="end"
       android:layout_marginRight="60dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_add_circle_black_24dp"
        android:contentDescription="@string/name"
        />

</android.support.v7.widget.CardView>






</RelativeLayout>

