<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.exchange.ExchangeActivity">
<android.support.v7.widget.Toolbar
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:id="@+id/toolbarchange"
    android:background="@color/colorPrimary"
    >
</android.support.v7.widget.Toolbar>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="70dp"
        android:layout_marginRight="7dp"
        >
    </Spinner>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/base"
android:ems="12"
        android:focusable="true"
        android:inputType="number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:hint="@string/base"
        />
<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="12"
    android:hint="@string/converted"
    android:focusable="true"
    android:inputType="number"
    android:id="@+id/converted"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="350dp"
    />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
      android:src="@drawable/ic_swap_vert_black_24dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/base"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/name"
        />

</RelativeLayout>